blurred image / fixed heading

--- a/css/techcrew_style.css
+++ b/css/techcrew_style.css
@@ -1,32 +1,60 @@
-.header{
-    background-image: url("../Images/Hero-Image.jpg");
-    height:400px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+body{
+  background-color: rgb(0,56,78);
+}
+
+.header {
+  position: relative;
+  height: 50vh;
+  overflow: hidden;
+}
+
+.header::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: url("../Images/Hero-Image.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  filter: blur(8px);
+  z-index: 1; 
 }
 
 .hero-text{
-  color: whitesmoke;
-  background-color: rgb(00,56,78);
-  margin-top: 400px;
-  padding-bottom: 20px;
-  font-size: 6vw;
+  display: grid;
+  color: black;
+  text-shadow: 2px 2px white;
+  font-weight: bold;
+  padding-bottom: 0px;
+  font-size: 8vw;
+  margin-top: 20vh;
+  position: relative;
+  z-index: 2;
 }
-.hero-time{
+
+.time{
   font-size: 3vw;
+  position: relative;
 }
 
 .intro{
-    text-align: center;
-    font-size: 
+  color: white;
+  display: grid;
+  text-align: center;
+  font-size: 20px;
+  padding-top: 20px;
 }
 
 .grid-container {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   grid-template-areas:
-    'header';
-  gap: 5%;
+    'header'
+    'intro';
+  row-gap: 20px;
   padding: 0px;
 }
 
@@ -35,3 +63,5 @@
   padding: 20px 0;
   font-size: 30px;
 }
+
+                              
